TURR-39 - Bejelentkezési panel lefejlesztése

--- a/Weboldal/app/globals.css
+++ b/Weboldal/app/globals.css
@@ -77,6 +77,6 @@ body,
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-hatter text-foreground;
   }
 }
