TURR-34 - TürrMédia API integrálás

--- a/Weboldal/app/globals.css
+++ b/Weboldal/app/globals.css
@@ -8,6 +8,10 @@ body,
   height: 100%;
 }
 
+.text-shadow-inside {
+  text-shadow: 0px 0px 9px black;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
