--- a/Weboldal/public/rolunk.css
+++ b/Weboldal/public/rolunk.css
@@ -38,11 +38,9 @@ li{
     font-size: 1.2em;
     margin-top: 10px;
 }
-.content{
-    background-color: #B7CEF2;
-    width: 100%;
-    height: 700px;
-    border-radius: 15px;
+.ReactModal__Content{
+    background-color: #B7CEF2 !important;
+    border-radius: 15px !important;
 }
 .tagokdiv{
     display: flex;
@@ -62,7 +60,6 @@ h3{
     margin-bottom: 15px;
     background-color: lightgrey;
     border-radius: 15px;
-    margin: 25px;
     margin-top: 5px;
 }
 .kepmegnyito{
@@ -74,18 +71,5 @@ h3{
     border-radius: 25px;
     margin-bottom: 10px;
 }
-@media screen and (max-width: 800px) {
-    .pagecontent{
-        flex-wrap: wrap;
-    }
-    .devteam, .podcastteam{
-        width: 100%;
-        padding: 10px;
-        margin: 1em;
-        float: left;
-    }
-    .tagokdiv{
-        flex-wrap: nowrap;
-    }
-}
+
 
