--- a/Weboldal/public/navbar.css
+++ b/Weboldal/public/navbar.css
@@ -1,4 +1,4 @@
-button {
+.NavGombok button {
     background-color: #0876dc71;
     border-radius: 90px;
     padding-left: 30px;
@@ -26,7 +26,7 @@ button {
     padding-right: 10px;
 }
 @media screen and (max-width: 1000px) {
-    button {
+    .NavGombok button {
         padding: 10px 20px 10px 20px;
     }
 }
