--- a/Weboldal/turr/templates/turr/rolunk.html
+++ b/Weboldal/turr/templates/turr/rolunk.html
@@ -6,97 +6,103 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rólunk</title>
     <style>
-        
-.devteam, .podcastteam{
-    width: 50%;
-    padding: 10px;
-    margin: 1em;
-    float: left;
-}
-.placeholderkep{
-    width: 85%;
-    margin: 0 auto;
-    display: block;
-    border-radius: 25px;
-    margin-bottom: 10px;
-}
-h1, ul{
-    text-align: center;
-}
-h1{
-    font-size: 2em;
-    font-weight: bold;
-    margin-bottom: 10px;
-}
-.pagecontent{
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: nowrap;
-}
-.tagcim{
-    list-style-type: none;
-    font-weight: bold;
-    font-size: 1.1em;
-}
-li{
-    margin: 2px;
-    font-size: 1.1em;
-}
-.focim{
-    font-size: 1.2em;
-    margin-top: 10px;
-}
-.tagokdiv{
-    display: flex;
-    flex-wrap: wrap;
-    text-align: center;
-    justify-content: space-around;
-}
-h2{
-    font-size: 2em;
-    font-weight: bold;
-}
-h3{
-    font-size: 1.5em;
-    font-weight: bold;
-}
-.tagkepek{
-    margin-bottom: 15px;
-    background-color: lightgrey;
-    border-radius: 15px;
-    margin-top: 5px;
-}
-button{
-    width: 85%;
-    margin: 0 auto;
-    display: block;
-    border-radius: 25px;
-    margin-bottom: 10px;
-}
-@media screen and (max-width: 800px) {
-    .pagecontent{
-        flex-wrap: wrap;
-    }
-    .devteam, .podcastteam{
-        width: 100%;
-        padding: 10px;
-        margin: 0 auto;
-        float: left;
-    }
-    h1{
-        margin-top: 30px;
-    }
-}
+        .devteam,
+        .podcastteam {
+            width: 50%;
+            padding: 10px;
+            margin: 1em;
+            float: left;
+        }
+
+        .placeholderkep {
+            width: 85%;
+            margin: 0 auto;
+            display: block;
+            border-radius: 25px;
+            margin-bottom: 10px;
+        }
+        h1,ul {
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 2em;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+
+        .pagecontent {
+            width: 100%;
+            margin: 0 auto;
+            display: flex;
+            flex-wrap: nowrap;
+        }
+
+        .tagcim {
+            list-style-type: none;
+            font-weight: bold;
+            font-size: 1.1em;
+        }
+
+        li {
+            margin: 2px;
+            font-size: 1.2em;
+            list-style-type: none;
+        }
+
+        .focim {
+            font-size: 1.2em;
+            margin-top: 10px;
+        }
+        .tagokdiv {
+            display: flex;
+            flex-wrap: wrap;
+            text-align: center;
+            justify-content: space-around;
+        }
+        .tagkepek {
+            margin-bottom: 15px;
+            background-color: lightgrey;
+            border-radius: 15px;
+            margin-top: 5px;
+        }
+
+        .kepmegnyito {
+            background-color: white;
+            box-shadow: none;
+            width: 85%;
+            margin: 0 auto;
+            display: block;
+            border-radius: 25px;
+            margin-bottom: 10px;
+        }
+        @media screen and (max-width: 800px) {
+            .pagecontent {
+                flex-wrap: wrap;
+            }
+
+            .devteam,
+            .podcastteam {
+                width: 100%;
+                padding: 10px;
+                margin: 0 auto;
+                float: left;
+            }
+
+            h1 {
+                margin-top: 30px;
+            }
+        }
     </style>
 </head>
 <body>
-    <h1 className="focim">A képekre kattintva részletes leírást találhatsz a csapatok tagjairól!</h1>
-        <div className="pagecontent">
-        <div className="devteam">
+    <!--{extends'navbar.html'}-->
+    <h1 class="focim">A képekre kattintva részletes leírást találhatsz a csapatok tagjairól!</h1>
+    <div class="pagecontent">
+        <div class="devteam">
             <h1>Fejlesztőcsapat</h1>
-            <button className="kepmegnyito">
-                <img src="/Weboldal/static/csapatplaceholder.png" alt="placeholderkep">
+            <button class="kepmegnyito">
+                <img src="/Weboldal/static/csapatplaceholder.png" alt="placeholderkep" class="placeholderkep">
             </button>
             <ul>
                 <li className="tagcim">Tagok:</li>
@@ -109,13 +115,13 @@ button{
 
         </div>
 
-        <div className="podcastteam">
+        <div class="podcastteam">
             <h1>Podcast-stáb</h1>
-            <button className="kepmegnyito">
-            <img src="/Weboldal/static/csapatplaceholder.png" alt="placeholderkep">
-        </button>
+            <button class="kepmegnyito">
+                <img src="/Weboldal/static/csapatplaceholder.png" alt="placeholderkep" class="placeholderkep">
+            </button>
             <ul>
-                <li className="tagcim">Tagok:</li>
+                <li class="tagcim">Tagok:</li>
                 <li>Bujáki Erik Attila</li>
                 <li>Krizsák Kornél</li>
                 <li>Rezsneki Bence</li>
@@ -124,5 +130,7 @@ button{
             </ul>
 
         </div>
+    </div>
 </body>
+
 </html>
